src/test/deca/context/valid/provided/testequals.deca
class A {
boolean equals(A a){}
}
