src/test/deca/context/invalid/provided/testi26.deca
class A{}
{
    A a = new boolean();
}